force-app/main/default/objects/Clear_Capital_API__c/Clear_Capital_API__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Clear Capital API Settings</label>
</CustomObject>