force-app/main/default/objects/Clear_Capital_API__c/fields/Bridge_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Account_Id__c</fullName>
    <label>Bridge Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>