force-app/main/default/objects/Clear_Capital_API__c/fields/Bridge_Password__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Password__c</fullName>
    <label>Bridge Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>