force-app/main/default/objects/Clear_Capital_API__c/fields/Bridge_Username__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Username__c</fullName>
    <label>Bridge Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>